jitsi/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jw
  namespace: jitsi
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: mydnschallenge
  routes:
    # 変更したら configmap.yaml の PUBLIC_URL も合わせること。
    - match: Host(`j.doany.io`)
      kind: Rule
      services:
        - name: jw
          port: 80
